--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,14 +9,18 @@ License: Public Domain
 Depends: 
   R(>= 4.0)
 Imports: 
-  broom.mixed,
-  dplyr,
-  lme4,
-  prediction,
-  magrittr,
-  purrr,
-  stringr,
-  tidyr
+    broom.mixed,
+    dplyr,
+    lme4,
+    prediction,
+    magrittr,
+    purrr,
+    stringr,
+    tidyr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Collate: 
+    'trend_fun.R'
+    'case_boot_sample.R'
+    'case_boot_lmer.R'
