added loess features

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,4 +25,6 @@ Collate:
     'trend_fun.R'
     'case_boot_sample.R'
     'case_boot_lmer.R'
+    'case_boot_loess.R'
     'plot_trend_response.R'
+    'trend_loess.R'
