--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,8 @@ importFrom(broom.mixed,tidy)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
+importFrom(dplyr,first)
+importFrom(dplyr,last)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
