--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: forestTrends
 Type: Package
-Title: Package uses case bootstrap to analyze trends with NPS forest data.
+Title: Package uses case bootstrap to analyze trends with NPS forest data
 Version: 0.1.0
 Author: Kate Miller
 Maintainer: Kate Miller <kathryn_miller@nps.gov>
 Description: This package contains functions that are tailord to NPS forest data for analyzing trends using case bootstrap and random intercept model.
-License: Public Domain
+License: 
+  Public Domain
 Depends: 
   R(>= 4.0)
 Imports: 
@@ -18,6 +19,8 @@ Imports:
     purrr,
     stringr,
     tidyr
+Suggests:
+    fANCOVA
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
