added plot_slopes function

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,5 +29,6 @@ Collate:
     'case_boot_sample.R'
     'case_boot_lmer.R'
     'case_boot_loess.R'
+    'plot_slopes.R'
     'plot_trend_response.R'
     'trend_loess.R'
