--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(case_boot_lmer)
 export(case_boot_loess)
 export(case_boot_sample)
+export(plot_slopes)
 export(plot_trend_response)
 export(trend_fun)
 export(trend_loess)
