--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ export(case_boot_loess)
 export(case_boot_sample)
 export(plot_slopes)
 export(plot_trend_response)
-export(trend_fun)
+export(trend_lmer)
 export(trend_loess)
 import(ggplot2)
 importFrom(broom.mixed,tidy)
