--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,11 @@
 
 export(case_boot_lmer)
 export(case_boot_loess)
+export(case_boot_power)
 export(case_boot_sample)
 export(plot_slopes)
 export(plot_trend_response)
+export(power_sim)
 export(trend_lmer)
 export(trend_loess)
 import(ggplot2)
@@ -13,14 +15,21 @@ importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
+importFrom(dplyr,group_by)
 importFrom(dplyr,last)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,right_join)
 importFrom(dplyr,select)
+importFrom(dplyr,summarize)
 importFrom(lme4,lmer)
 importFrom(magrittr,"%>%")
 importFrom(prediction,find_data)
 importFrom(purrr,map)
+importFrom(purrr,map2_dfr)
 importFrom(purrr,map_df)
+importFrom(purrr,map_dfr)
 importFrom(stringr,str_pad)
+importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
+importFrom(tidyselect,all_of)
