--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,9 @@ Imports:
     tidyr
 Suggests:
     fANCOVA,
-    fishmethods
+    fishmethods,
+    furrr,
+    future
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
