--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,12 +21,12 @@ importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,right_join)
 importFrom(dplyr,select)
+importFrom(dplyr,slice_sample)
 importFrom(dplyr,summarize)
 importFrom(lme4,lmer)
 importFrom(magrittr,"%>%")
 importFrom(prediction,find_data)
 importFrom(purrr,map)
-importFrom(purrr,map2_dfr)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(stringr,str_pad)
