--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ importFrom(lme4,lmer)
 importFrom(magrittr,"%>%")
 importFrom(prediction,find_data)
 importFrom(purrr,map)
+importFrom(purrr,map2_dfr)
 importFrom(purrr,map_df)
 importFrom(purrr,map_dfr)
 importFrom(stringr,str_pad)
