--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ import(ggplot2)
 importFrom(broom.mixed,tidy)
 importFrom(dplyr,arrange)
 importFrom(dplyr,case_when)
+importFrom(dplyr,desc)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,first)
 importFrom(dplyr,group_by)
